# pointcloud_ground_removal

./: .gitignore  CMakeLists.txt  README.md  setup.py
scripts/: examples.py
src/: ground_removal.cpp  ground_removal.hpp  main.cpp
